Agregar endpoint para obtener todas las funciones de un cine
